# Compiladores

./: README.md
Lab 1/: aula-lab-1-hs.md
Lab 1/src/: Interpreter.hs  Tests.hs
Lab 2/: aula-lab-2-hs.md
Lab 2/src/: HsLexer.hi  HsLexer.hs  Lexer.hi  Lexer.hs  Lexer.x
Lab 3/: Grammar.hs
Lab 3/src/: Lexer.x  Parser.hs
Lab 4/src/: Lexer.x  Parser.y
Projeto/: compiler.cabal
Projeto/examples/: example1.c0  example2.c0  example4.c0
Projeto/src/: AST.hs  CodeGen.hs  IR.hs  Lexer.hs  Lexer.x  MIPSGenerator.hs  Parser.hs  Parser.info  Parser.y  teste.hs
Projeto/tests/: input1.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input2.txt  input20.txt  input21.txt  input22.txt  input23.txt  input24.txt  input25.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output16.txt  output17.txt  output19.txt  output21.txt  output23.txt  output4.txt  output6.txt  output7.txt  output8.txt  output9.txt  (+3 more)
