
name:                compiler
version:             0.1.0.0
synopsis:            Trabalho para Compiladores (CC3001)
description:         Compilador simples para linguagem C0
author:              Carla Henriques e Rui Santos
maintainer:          email@domínio
category:            Language
build-type:          Simple
cabal-version:       >=1.10
                     
executable compiler
  main-is:             Main.hs
  other-modules:       Lexer, Parser, AST, CodeGen , IR, MIPSGenerator
  build-tools:         alex, happy
  build-depends:       base, array , containers , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
